--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.4.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "dotenv": "^16.5.0"
   }
 }
